--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#bloco-calc {
+/* #bloco-calc {
     width: 100vw;
     height: 100vh;
 
@@ -98,3 +98,4 @@ button {
     border-radius: 3px;
     background-color: #F99E05;
 }
+ */
