--- a/style.css
+++ b/style.css
@@ -14,6 +14,59 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.fundo {
+    height: 100vh;
+
+    text-align: center;
+
+    color: white;
+    background-image: linear-gradient(25deg, black, crimson);
+}
+
+.calculadora {
+    padding: 15px;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+
+    background-color: rgba(0, 0, 0, .8);
+}
+
+p#resultado {
+    width: 207px;
+    height: 35px;
+
+    margin: 5px auto;
+    padding: 5px;
+
+    font-size: 25px;
+    text-align: right;
+
+    color: black;
+    background-color: white;
+}
+
+.botao {
+    width: 50px;
+    height: 50px;
+
+    margin: 2px;
+
+    cursor: pointer;
+    font-size: 25px;
+
+    color: white;
+    background-color: rgb(31, 31, 31);
+}
+
+.botao:hover {
+    background-color: black;
+}
+
 /* #bloco-calc {
     width: 100vw;
     height: 100vh;
