--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.fundo {
+/* .fundo {
     height: 100vh;
 
     text-align: center;
@@ -65,9 +65,13 @@ p#resultado {
 
 .botao:hover {
     background-color: black;
-}
+} */
 
-/* #bloco-calc {
+/*
+
+ */
+
+#fundo {
     width: 100vw;
     height: 100vh;
 
@@ -78,14 +82,16 @@ p#resultado {
     background-color: rgb(40, 151, 170);
 }
 
-#calc {
+#calculadora {
     width: 300px;
     height: 450px;
+
+    border-radius: 3px;
 
     background-color: rgb(26, 24, 24);
 }
 
-#tela-calc {
+#tela {
     width: 94%;
     height: 60px;
 
@@ -100,11 +106,12 @@ p#resultado {
     font-weight: bold;
 
     border-radius: 3px;
-    color: rgba(0, 0, 0, 0.637);
+    
+    color: rgba(0, 0, 0, 0.788);
     background-color: #03a073;
 }
 
-#container-teclas-calc {
+#container-teclas {
     width: 100%;
     height: 77.8%;
 
@@ -113,7 +120,7 @@ p#resultado {
     justify-content: center;
 }
 
-#teclas-calc {
+#teclas {
     width: 90%;
     height: 96.5%;
 
@@ -125,8 +132,8 @@ p#resultado {
     border-radius: 3px;
 }
 
-button:not(#resultado, #zero) {
-    width: 65px;
+button:not(#igual, #zero) {
+    width: 66px;
     height: 65px;
 }
 
@@ -134,8 +141,22 @@ button {
     font-size: 1em;
     font-weight: bold;
 
+    cursor: pointer;
+
     border-radius: 3px;
     background-color: #9BE0AB;
+}
+
+button:hover {
+    opacity: .9;
+}
+
+#igual {
+    grid-column: 4/5;
+    grid-row: 4/6;
+
+    border-radius: 3px;
+    background-color: #F99E05;
 }
 
 #zero {
@@ -144,11 +165,3 @@ button {
     border-radius: 3px;
     background-color: #9BE0AB;
 }
-
-#resultado {
-    grid-column: 3/5;
-
-    border-radius: 3px;
-    background-color: #F99E05;
-}
- */
